tests/typechecker/pass/008-sub.hyg
(4 - 5): int;
(1.0f - 3.14f): float
