tests/typechecker/fail/030-type-alias.hyg
type S = int;
type S = float;
let x: S = 42.0f;
x
